[package]
name = "chashmap-async"
version = "0.1.0"
edition = "2018"
authors = ["ticki <Ticki@users.noreply.github.com>", "Amanda Graven <amanda@graven.dev>"]
description = "Concurrent async hash maps with key-scoped locking"
repository = "https://gitlab.com/famedly/company/backend/libraries/chashmap"
documentation = "https://docs.rs/chashmap-async"
license = "MIT"
keywords = ["hashmap", "concurrent", "async", "lock", "map"]
exclude = ["target", "Cargo.lock"]

[dependencies]
async-lock = "2.4"
futures = "0.3"
owning_ref = { version = "0.4.4", package = "owning_ref_async", features = ["async"] }
stable_deref_trait = "1.0"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
